# lotad

./: .env.example  .gitignore  CLAUDE.md  Spec.md  alembic.ini  pyproject.toml  task_runbook.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_touhoudb_schema_alignment.py  0003_characters_touhoudb_id.py  0004_song_type_music_pv.py  0005_characters_other_names.py  0006_original_songs_schema_rework.py  0007_works_touhoudb_id.py  0008_album_tracks_and_events_schema.py  0008_original_songs_work_id_nullable.py  0009_album_tracks_and_events_schema.py  0010_dedup_open_tasks_unique_index.py  0010_tasks_llm_enrichment.py  0011_tasks_llm_enrichment.py  0012_tasks_data_jsonb.py
lotad/: config.py
lotad/agents/: llm_extractor.py
lotad/cli/: db.py  ingest.py  main.py  originals.py  score.py  sync.py  tasks.py
lotad/cli/tasks/: __init__.py  _actions.py  _group.py  _shared.py  _wizards.py  dismiss.py  enrich.py  list_.py  resolve.py  show.py
lotad/db/: models.py  session.py
lotad/db/seeds/: playlists.py  works.py
lotad/ingestion/: http_client.py  mappers.py  pipeline.py  touhoudb_client.py  touhoudb_models.py  youtube_client.py
lotad/tasks/: manager.py
tests/: test_ingestion.py  test_smoke.py  test_touhoudb_client_unit.py  test_youtube_client.py
