[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lotad"
version = "0.1.0"
description = "Local Ordered Touhou Arrangements Database"
requires-python = ">=3.12"
dependencies = [
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",        # PostgreSQL driver (psycopg3, binary bundle)

    # HTTP + resilience
    "httpx>=0.27",
    "tenacity>=8.3",
    "hishel>=0.0.30,<1.0",          # RFC-7234 HTTP caching for httpx (1.x has breaking API changes)

    # LLM + structured output
    "anthropic>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",       # BaseSettings for env-based config

    # Browser automation
    "playwright>=1.44",

    # YouTube + Google APIs
    "google-api-python-client>=2.130",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.2",

    # Google Sheets migration
    "gspread>=6.1",

    # Local file watcher
    "watchdog>=4.0",

    # CLI
    "click>=8.1",
    "rich>=13.7",

    # Config / secrets
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",                  # httpx mock / record fixtures
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
lotad = "lotad.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["lotad"]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["lotad"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
